--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/quiz.js"></script>
+    <script src="quiz.js"></script>
 </body>
 </html>
